--- a/app.json
+++ b/app.json
@@ -5,8 +5,8 @@
         "telegram",
         "gplink"
     ],
-    "website": "https://github.com/Pdiskbot/pdiskshortforyou",
-    "repository": "https://github.com/Pdiskbot/pdiskshortforyou",
+    "website": "https://github.com/Trydisk/newshortfor",
+    "repository": "https://github.com/Trydisk/newshortfor",
     "env": {
         "BOT_TOKEN": {
             "description": "Your telegram bot token",
@@ -14,23 +14,23 @@
         },
         "API_ID": {
             "description": "Get this value from https://my.telegram.org",
-            "value": "7626510"
+            "value": ""
         },
         "API_HASH": {
             "description": "Get this value from https://my.telegram.org",
-            "value": "ca991bfa07a6ac45e6d5f374c84ab05c"
+            "value": ""
         },
         "API_KEY": {
             "description": "https://pdiskshortforyou.tech/member/tools/api",
-            "value": "63c301e0e818c79153e9175ff8f9d0833dce5c76"
+            "value": ""
         },
         "CHANNEL": {
             "description": "Your Backup channel link",
-            "value": "https://t.me/hornyworld22"
+            "value": ""
         },
         "HOWTO": {
             "description": "Your 'How to Download from pdiskshortforyou' video link",
-            "value": "https://t.me/hornyworld22/13"
+            "value": ""
         }
         },
         
