--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
         },
         "HOWTO": {
             "description": "Your 'How to Download from pdiskshortforyou' video link",
-            "value": ""
+            "value": "https://youtube.com/shorts/xfkLnAdjoNw?feature=share"
         }
         },
         
