--- a/app.json
+++ b/app.json
@@ -26,7 +26,7 @@
         },
         "CHANNEL": {
             "description": "Your Backup channel link",
-            "value": ""
+            "value": "https://youtube.com/shorts/xfkLnAdjoNw?feature=share"
         },
         "HOWTO": {
             "description": "Your 'How to Download from pdiskshortforyou' video link",
