--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
             "description": "https://pdiskshortforyou.tech/member/tools/api",
             "value": ""
         },
-        "CREATE": {
+        "CREATEME": {
             "description": "DO NOT EDIT IT",
             "value": "https://youtube.com/shorts/xfkLnAdjoNw?feature=share"
         },
