--- a/app.json
+++ b/app.json
@@ -26,7 +26,7 @@
         },
         "CHANNEL": {
             "description": "Enter your telegram channel Username (must change and without @)",
-            "value": "hornyworld22"
+            "value": ""
         }
     },
         
